--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Cadastro-se
+                Cadastre-se
               </h3>
               <p class="lighter">
                 Preencha seu cadastro e veja as oportunidades em nosso site.
