--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -261,7 +261,7 @@
         </div>
         <div class="footer-carousel">
           <drag-scroll class="carousel" #nav scrollbar-hidden="true" drag-scroll-y-disabled="true">
-            <a routerLink="/landing-page-gv" class="animated fadeIn faster" *ngIf="actual == 1">
+            <a routerLink="/voluntario-global" class="animated fadeIn faster" *ngIf="actual == 1">
               <div class="cases case-1" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case box-case-gv">
@@ -281,7 +281,7 @@
                 </div>
               </div>
             </a>
-            <a routerLink="/landing-page-ge" class="animated fadeIn faster" *ngIf="actual == 2">
+            <a routerLink="/empreendedor-global" class="animated fadeIn faster" *ngIf="actual == 2">
               <div class="cases case-2" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case">
@@ -302,7 +302,7 @@
               </div>
 
             </a>
-            <a routerLink="/landing-page-gt" class="animated fadeIn faster" *ngIf="actual == 3">
+            <a routerLink="/talento-global" class="animated fadeIn faster" *ngIf="actual == 3">
               <div class="cases case-3" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case">
