--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -127,9 +127,9 @@
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
-            <p><a routerLink="../landing-page-ge">Empreendedor Global</a></p>
-            <p><a routerLink="../landing-page-gt">Talento Global</a></p>
-            <p><a routerLink="../landing-page-gv">Voluntário Global</a></p>
+            <p><a routerLink="../empreendedor-global">Empreendedor Global</a></p>
+            <p><a routerLink="../talento-global">Talento Global</a></p>
+            <p><a routerLink="../voluntario-global">Voluntário Global</a></p>
             <p><a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
