--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -191,6 +191,7 @@ body {
     color: #fff !important;
     option {
         color: #000000;
+        font-size: 18px;
     }
 }
 
@@ -1097,22 +1098,22 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 2.75vw !important;
+                font-size: 4.50vw !important;
                 color: #fff;
                 font-style: italic;
             }
             input:-moz-placeholder {
-                font-size: 2.75vw !important;
+                font-size: 4.50vw !important;
                 color: #fff;
                 font-style: italic;
             }
             input::-moz-placeholder {
-                font-size: 2.75vw !important;
+                font-size: 4.50vw !important;
                 color: #fff;
                 font-style: italic;
             }
             input:-ms-input-placeholder {
-                font-size: 2.75vw !important;
+                font-size: 4.50vw !important;
                 color: #fff;
                 font-style: italic;
             }
@@ -1235,7 +1236,7 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 2.75vw !important;
+        font-size: 4.25vw !important;
         text-align: left;
         font-style: italic;
         padding-right: 0;
@@ -1243,7 +1244,7 @@ label {
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 2.75vw !important;
+        font-size: 4.25vw !important;
         text-align: left;
         padding-right: 0;
         font-style: italic;
@@ -1251,14 +1252,14 @@ label {
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 2.75vw !important;
+        font-size: 4.25vw !important;
         text-align: left;
         padding-right: 0;
         font-style: italic;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 2.75vw !important;
+        font-size: 4.25vw !important;
         text-align: left;
         padding-right: 0;
         font-style: italic;
@@ -1451,7 +1452,7 @@ label {
 .logo-talentos-globais {
     max-width: 350px;
     width: 100%;
-    height: 200px;
+    height: 110px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
