--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -53,6 +53,42 @@
           </div>
           <div class="animated fadeIn" *ngIf="personalData && !completedSignup">
             <form [formGroup]="step1Form" class="forms gv" (keydown.enter)="registerUser()">
+
+              <div class="form-group">
+                <div class="input-group select-dropdown">
+                  <div class="input-group-prepend desktop">
+                    <div class="input-group-text">
+                      <i class="fas fa-graduation-cap"></i><span class="desktop">Programa</span></div>
+                  </div>
+                  <!-- Desktop -->
+                  <div class="dropdown desktop">
+                    <div class="styled-select">
+                      <select [(ngModel)]="user.program" formControlName="program" name="program" dir="rtl">
+                        <option value="">Qual programa deseja ingressar</option>
+                        <option value="0">Voluntário Global</option>
+                        <option value="1">Talento Global</option>
+                        <option value="2">Empreendedor Global</option>
+                      </select>
+                    </div>
+                  </div>
+                  <!-- Mobile -->
+                  <i class="fas fa-graduation-cap mobile mobile-icon"></i>
+                  <div class="dropdown mobile">
+                    <div class="styled-select">
+                      <select [(ngModel)]="user.program" formControlName="program" name="program">
+                        <option value="">Programa</option>
+                        <option value="0">Voluntário Global</option>
+                        <option value="1">Talento Global</option>
+                        <option value="2">Empreendedor Global</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div *ngIf="isValidPersonal('program')" class='error-message'>
+                  Selecione um programa para ingressar
+                </div>
+              </div>
+
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-prepend desktop">
@@ -182,34 +218,6 @@
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="input-group select-dropdown">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-graduation-cap"></i>Programa</div>
-                    </div>
-                    <div class="dropdown">
-                      <div class="styled-select">
-                        <select [(ngModel)]="user.program" formControlName="program" name="program">
-                          <option value="">Qual programa deseja ingressar?</option>
-                          <option value="0">Voluntário Global</option>
-                          <option value="1">Talento Global</option>
-                          <option value="2">Empreendedor Global</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div *ngIf="isValidPersonal('program')" class='error-message'>
-                    Selecione um programa para ingressar
-                  </div>
-                </div>
-
-                <div class="form-group form-check text-center checkbox">
-                  <input type="checkbox" class="form-check-input" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable" formControlName="cellphone_contactable"
-                    name="cellphone_contactable">
-                  <label class="form-check-label" for="aceitoTermos">Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
                 </div>
               </div>
               <div *ngIf="isValidPersonal('password')" class='error-message animated fadeIn'>
