--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -27,6 +27,16 @@
     }
 }
 
+.full-screen {
+    position: absolute !important;
+    width: 100% !important;
+    height: 100% !important;
+    display:flex;
+    align-items: center;
+    justify-content : center;
+    overflow-y: auto;
+}
+
 .desktop {
     display: flex !important;
 }
@@ -1627,7 +1637,7 @@ label {
 .logo-voluntario-global {
     max-width: 350px;
     width: 100%;
-    height: 110px;
+    height: 150px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
