--- a/src/app/form-offline/form-offline.component.scss
+++ b/src/app/form-offline/form-offline.component.scss
@@ -1,10 +1,18 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min.css';
-// form A/B - start
+
+.full-screen {
+    position: absolute !important;
+    width: 100% !important;
+    height: 100% !important;
+    display:flex;
+    align-items: center;
+    justify-content : center;
+    overflow-y: auto
+}
+
 .relative-form {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: relative;
     .toggle-form {
         position: absolute;
         left: 5px;
@@ -212,17 +220,19 @@ body {
     border-radius: 3px;
     overflow: hidden;
     position: relative;
+
 }
 
 .styled-select,
 .styled-select select {
+    font-size: 22px;
     width: 100%;
     color: #fff !important;
-    font-weight: lighter;
     padding-right: 15px;
+    font-weight: bold;
     option {
         color: #000000;
-        font-size: 18px;
+        font-size: 22px;
     }
 }
 
@@ -1619,7 +1629,7 @@ label {
 .logo-offline {
     max-width: 350px;
     width: 100%;
-    height: 110px;
+    height: 150px;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
