fix(merge): merge staging

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <hr/>
-    <div class="row">
+    <div class="row bg-footer-group">
       <div class="footer-links col-md-6">
         <div class="row">
           <div class="footer-group-links col-md-4 col-sm-6">
