--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -2,7 +2,7 @@
 #bg-menu {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, .6);
     position: fixed;
     left: 0;
     top: 0;
@@ -31,6 +31,7 @@
     z-index: 10;
     position: relative;
 }
+
 .header-product {
     width: 100%;
     padding: 0 0 55px 0;
@@ -65,13 +66,22 @@
         display: flex;
         justify-content: space-between;
         padding: 0 15px;
-        .logo-aiesec {
+        .logo-aiesec,
+        .logo-menu {
             background-image: url('../../assets/images/aiesec-logo.png');
-            height: 25px;
-            margin: 20px 0;
             background-size: contain;
             background-position: center left;
             background-repeat: no-repeat;
+        }
+        .logo-aiesec {
+            height: 25px;
+            margin: 20px 0;
+        }
+        .logo-menu {
+            width: 60%;
+            height: 75px;
+            display: table;
+            margin: auto;
         }
         .menu-product {
             ul {
@@ -131,7 +141,6 @@
         display: none !important;
     }
     .header-product div.responsive-menu .menu-icon {
-        color: #fff;
         display: block;
         position: fixed;
         right: 35px;
@@ -139,17 +148,20 @@
         color: $default;
         z-index: 100;
         font-size: 25px;
+        .fa-times {
+            color: #fff;
+            z-index: 51
+        }
     }
     #active-responsive-menu {
         color: #fff;
         flex-direction: column;
         position: fixed;
-        top: 45px;
+        top: 0;
         background-color: $default;
-        border-radius: 10px;
-        z-index: 100;
+        z-index: 50;
         left: 0;
-        height: 95vh;
+        height: 100vh;
         padding: 0;
         margin: 0;
         width: 100%;
