--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -471,9 +471,7 @@ drag-scroll {
     left: 5%;
     top: 5%;
     background-color: #fff;
-    height: 75%;
     box-shadow: 0 0 5px #c3c3c3;
-    overflow: auto;
     box-sizing: border-box;
     padding: 1% 3%;
     display: flex;
@@ -520,10 +518,6 @@ drag-scroll {
         margin: 5px auto 0 auto;
         padding: 0 10px;
         box-sizing: border-box;
-        &.product-story-info {
-            max-height: 65px;
-            overflow: auto;
-        }
     }
     span {
         display: block;
@@ -564,7 +558,7 @@ drag-scroll {
     }
     section.padding-top-and-bottom,
     section.margin-top-and-bottom {
-        padding: 37.5px 0 !important
+        padding: 27.5px 0 !important
     }
     .col-sm-12,
     .col-md-12 {
@@ -590,17 +584,14 @@ drag-scroll {
         display: none;
     }
     .box-case {
-        width: 85%;
-        bottom: 20%;
-        height: 50%;
+        width: 90%;
+        bottom: 10px;
+        height: auto;
         top: auto;
+        min-height: 250px;
         .logo-product {
             height: 50px;
             background-size: 50%;
-        }
-        p {
-            height: 60px;
-            overflow: auto;
         }
     }
     .history-session-image {
@@ -614,7 +605,7 @@ drag-scroll {
         }
     }
     .history-session-content {
-        padding: 10%;
+        padding: 0 10%;
         .row.margin {
             .col-sm {
                 width: 50%;
@@ -625,6 +616,13 @@ drag-scroll {
     .experiences-session {
         .LDM {
             transform: scale(1)
+        }
+        h1 {
+            padding: 0 25px;
+            margin: 0;
+        }
+        .align-left {
+            padding: 0 35px;
         }
     }
     .global-columns {
@@ -667,6 +665,12 @@ drag-scroll {
         p.mobile {
             height: auto;
             font-size: 1.4em;
+        }
+    }
+    drag-scroll {
+        height: 700px !important;
+        .cases {
+            height: 700px !important
         }
     }
 }
