--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1462,3 +1462,40 @@ label {
     background-image: url('../../assets/images/logo-talentos-globais.png');
     margin: auto
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.autocomplete {
+    height: 50px;
+    padding-top: 20px;
+}
+
+.autocomplete-placeholder {
+    font-size: 16px !important;
+    color: #fff;
+    font-style: italic;
+}
+
+/deep/ .mat-autocomplete-panel.mat-autocomplete-visible {
+    background-color: white;
+}
+
+/deep/ .mat-autocomplete {
+    background-color: red;
+}
+
+/deep/ .cdk-overlay-pane, .cdk-overlay-pane {
+    position: relative;
+}
+
+/deep/ .mat-autocomplete::-webkit-input-placeholder {
+    color: red;
+}
