--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -562,8 +562,8 @@ input:-moz-placeholder {
     text-align: right;
     padding-right: 30px;
     font-size: 13px !important;
-            color: #fff;
-            font-style: italic;
+    color: #fff;
+    font-style: italic;
 }
 
 input::-moz-placeholder {
@@ -573,8 +573,8 @@ input::-moz-placeholder {
     text-align: right;
     padding-right: 30px;
     font-size: 13px !important;
-            color: #fff;
-            font-style: italic;
+    color: #fff;
+    font-style: italic;
 }
 
 input:-ms-input-placeholder {
@@ -583,8 +583,8 @@ input:-ms-input-placeholder {
     text-align: right;
     padding-right: 30px;
     font-size: 13px !important;
-            color: #fff;
-            font-style: italic;
+    color: #fff;
+    font-style: italic;
 }
 
 input[type=text],
@@ -1643,4 +1643,41 @@ label {
     background-position: center center;
     background-image: url('../../assets/images/logo-voluntario-global.png');
     margin: auto
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.autocomplete {
+    height: 50px;
+    padding-top: 20px;
+}
+
+.autocomplete-placeholder {
+    font-size: 16px !important;
+    color: #fff;
+    font-style: italic;
+}
+
+/deep/ .mat-autocomplete-panel.mat-autocomplete-visible {
+    background-color: white;
+}
+
+/deep/ .mat-autocomplete {
+    background-color: red;
+}
+
+/deep/ .cdk-overlay-pane, .cdk-overlay-pane {
+    position: relative;
+}
+
+/deep/ .mat-autocomplete::-webkit-input-placeholder {
+    color: red;
 }
