--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -168,8 +168,8 @@
                     </div>
                     
                     <i class="fas fa-gift mobile mobile-icon"></i>
-                    <p-inputMask class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}" 
-                    [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" required mask="99/99/9999"></p-inputMask>
+                    <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}" 
+                    [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" mask="00/00/0000"/>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
